--- a/src/Contact-me.html
+++ b/src/Contact-me.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar is-black" role="navigation" aria-label="main navigation">
+        <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a role="button" class="navbar-burger burger" id="burger" aria-expanded="false" data-target="navbarMenu">
                     <span aria-hidden="true"></span>
@@ -80,9 +80,8 @@
                     </div>
                 </div>
             </div>
-            
-            <div class="content">
-                <h6 class="title is-6">Social Media:</h6>
+            <h6 class="title is-6">Social Media:</h6>
+            <div class="columns">                
                 <a class="fa fa-facebook"></a>
                 <a class="fa fa-instagram"></a>
                 <a class="fa fa-youtube"></a>
