--- a/src/Services.html
+++ b/src/Services.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar is-black" role="navigation" aria-label="main navigation">
+        <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a role="button" class="navbar-burger burger" id="burger" aria-expanded="false" data-target="navbarMenu">
                     <span aria-hidden="true"></span>
