Changing Root Directory for Deploying Resources

--- a/Contact-me.html
+++ b/Contact-me.html
@@ -18,11 +18,11 @@
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                 </a>
-                <a class="navbar-item title" href="./HomePage.html">Portfolio</a>
+                <a class="navbar-item title" href="./index.html">Portfolio</a>
             </div>
             <div id="navbarMenu" class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item" href="./HomePage.html">Home</a>
+                    <a class="navbar-item" href="./index.html">Home</a>
                     <a class="navbar-item" href="./Services.html">Services</a>
                     <a class="navbar-item" href="./Experiences.html">Experiences</a>
                     <a class="navbar-item" href="./Works.html">Works</a>
@@ -104,7 +104,7 @@
                 <div class="column">
                     <h4 class="title is-4">Pages</h4>
                     <ul class="footer-pages">
-                        <li><a href="./HomePage.html">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="./Services.html">Services</a></li>
                         <li><a href="./Experiences.html">Experiences</a></li>
                         <li><a href="./Works.html">Works</a></li>
